--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,5 +2,9 @@
 
 html {
   scroll-behavior: smooth;
+  font-family: var(--font-poppins), sans-serif;
 }
 
+.font-luckiest {
+  font-family: var(--font-luckiest), cursive;
+}
